examples/test/testpolicy204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy204
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key17: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value40
          key19: value18
          key22: value45
      podSelector:
        matchLabels:
          key9: value26
          key38: value8
          key8: value43
